# Bitdoglab-pico_w_projeto_IoT

src/pico_mqttp/: CMakeLists.txt  FreeRTOSConfig.h  VL53L0X.c  lwipopts.h  main.c
src/pico_mqttp/build_old/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  main.dis  main.elf  main.elf.map  main.hex  main.uf2
src/pico_mqttp/build_old/.cmake/api/v1/reply/: cache-v2-7ac249c58fca0669e05a.json  cmakeFiles-v1-a3ef02f9bdaabd249949.json  codemodel-v2-21bdf41239295ec2b6fb.json  directory-FREERTOS_KERNEL-Debug-4123df798a6dfc09d952.json  directory-pico-sdk-Debug-04b481a074f1b70f24e7.json  directory-pico-sdk.docs-Debug-e96cb31bc9b7bed8f32b.json  directory-pico-sdk.src-Debug-eb667008f6a680853bc1.json  directory-pico-sdk.src.common.boot_picobin_headers-Debug-1d35943a2e50fab3c89a.json  directory-pico-sdk.src.common.boot_picoboot_headers-Debug-12e73efed797520f134f.json  directory-pico-sdk.src.common.boot_uf2_headers-Debug-e929ce0a4226c9515196.json  directory-pico-sdk.src.common.hardware_claim-Debug-2bf66a7eb165e2751208.json  (+97 more)
src/pico_mqttp/build_old/FREERTOS_KERNEL/: cmake_install.cmake
src/pico_mqttp/build_old/pico-sdk/: cmake_install.cmake
src/pico_mqttp/build_old/pico-sdk/docs/: cmake_install.cmake
src/pico_mqttp/build_old/pico-sdk/src/: cmake_install.cmake
src/pico_mqttp/build_old/pico-sdk/tools/: cmake_install.cmake
src/pico_mqttp/build_old/pioasm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  install_manifest.txt
src/pico_mqttp/inc/: ENV.h  TCS34725.h
(+133 files in other folders)
